<resources>
    <string name="app_name">Wakey Wakey LAN</string>
    <string name="title_main">Wake on LAN</string>
    <string name="subtitle_main">Scan the network, save devices, and wake them from your TV remote.</string>
    <string name="scan_network">Scan network</string>
    <string name="add_device">Add device</string>
    <string name="refresh_shortcuts">Refresh shortcuts</string>
    <string name="discovered_devices">Discovered devices</string>
    <string name="saved_devices">Saved devices</string>
    <string name="status_ready">Ready.</string>
    <string name="status_scanning">Scanning the local network...</string>
    <string name="status_no_devices">No devices found yet. Try a scan or add one manually.</string>
    <string name="status_saved">Saved and shortcut updated.</string>
    <string name="status_woke">Sent Wake-on-LAN packet.</string>
    <string name="status_deleted">Device removed.</string>
    <string name="wake">Wake</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="shortcut">Shortcut</string>
    <string name="remove">Delete</string>
    <string name="device_name">Name</string>
    <string name="device_ip">IP address</string>
    <string name="device_mac">MAC address</string>
    <string name="device_broadcast">Broadcast address</string>
    <string name="save_device_title">Save device</string>
    <string name="manual_device_title">Add a device</string>
    <string name="manual_device_message">Enter a friendly name, the device MAC address, and the broadcast address for its network.</string>
    <string name="shortcut_refresh_done">Shortcuts refreshed.</string>
    <string name="error_invalid_mac">Enter a valid MAC address.</string>
    <string name="error_invalid_ip">Enter a valid IP address.</string>
    <string name="error_name_required">Enter a device name.</string>
    <string name="error_wake_failed">Wake packet could not be sent.</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="shortcut_picker_title">Choose shortcut target</string>
    <string name="shortcut_picker_subtitle">Pick the saved device this shortcut should wake.</string>
    <string name="shortcut_no_devices">No saved devices yet. Save a device first, then create the shortcut.</string>
</resources>